update: integrate and test notifier service with Africa's Talking SMS provider
